# TFL

./: .gitignore
RK1/: problem1.tex  solutions.tex
RK2/: :w  solutions.tex
lab1/: README.md
lab1/examples/: example1.txt  example2.txt  example3.txt  g1.txt
lab1/scripts/: run.sh
lab1/src/: README.md  main.rs
lab1/src/ordinal/: mod.rs
lab1/src/solver/: mod.rs
lab1/src/utils/: input_reader.rs  mod.rs  smt.rs
lab1/templates/: end.smt2  preamble.smt2
lab3/: Cargo.toml  README.md  oracle.sh
lab3/app/: app.cabal
lab3/app/src/: Affixes.hs  Automata.hs  Dot.hs  ListUtils.hs  Main.hs  WGraph.hs
lab3/app/testsuite/data/: graph.dot  incorrect-graph.dot
lab3/app/testsuite/tests/: Automata.hs  DotTest.hs  WGraphTest.hs
lab3/src/: angluin.rs  dfa.rs  main.rs  mat.rs
lab5/: Cargo.toml  README.md  automaton.gv  grammar.txt  run.sh
lab5/scripts/: run.sh
lab5/src/: grammar.rs  main.rs  parser.rs  stack.rs
lab5/tests/: grammar1.txt  grammar2.txt  grammar3.txt
