[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
fancy-regex = "0.13.0"
fixedbitset = "0.4.2"
itertools = "0.12.0"
rand = "0.8.5"
