cabal-version: 2.4
name: app
version: 0.1.0.0

executable app
    main-is: Main.hs
    build-depends:
          base ^>=4.17.2.0
        , containers ^>=0.6.7
        , parsec ^>=3.1.16.1
    other-modules:
          Dot
        , Automata
    hs-source-dirs: src
    default-language: Haskell2010

Test-Suite dot-parser
    type: exitcode-stdio-1.0
    main-is: Dot.hs
    build-depends:
          base ^>=4.17.2.0
        , test-framework
        , test-framework-quickcheck2
        , QuickCheck ^>=2.14.3
    hs-source-dirs: testsuite/tests

Test-Suite automata
    type: exitcode-stdio-1.0
    main-is: Automata.hs
    build-depends:
          base ^>=4.17.2.0
        , test-framework
        , test-framework-quickcheck2
        , QuickCheck ^>=2.14.3
    hs-source-dirs: testsuite/tests
