cabal-version: 2.4
name: app
version: 0.1.0.0

library uma-dot
    exposed-modules: Dot
    hs-source-dirs: src
    build-depends:
          base ^>=4.17.2.0
        , parsec ^>=3.1.16.1
    default-language: Haskell2010

library uma-wgraph
    exposed-modules: WGraph
    other-modules: ListUtils
    hs-source-dirs: src
    build-depends:
          base ^>=4.17.2.0
        , uma-list-utils
    default-language: Haskell2010

library uma-automata
    exposed-modules: Automata
    other-modules: Dot, WGraph, ListUtils
    hs-source-dirs: src
    build-depends:
          base ^>=4.17.2.0
        , parsec ^>=3.1.16.1
        , uma-dot
        , uma-list-utils
        , uma-wgraph
        , containers ^>=0.6.7
    default-language: Haskell2010

library uma-list-utils
    exposed-modules: ListUtils
    hs-source-dirs: src
    build-depends:
          base ^>=4.17.2.0
    default-language: Haskell2010

library uma-affixes
    exposed-modules: Affixes
    other-modules: Automata, Dot
    hs-source-dirs: src
    build-depends:
          base ^>=4.17.2.0
        , parsec ^>=3.1.16.1
        , uma-dot
        , containers ^>=0.6.7
        , uma-automata
    default-language: Haskell2010

executable app
    main-is: Main.hs
    other-modules: Automata, Dot, Affixes
    build-depends:
          base ^>=4.17.2.0
        , parsec ^>=3.1.16.1
        , uma-dot
        , containers ^>=0.6.7
        , uma-automata
        , uma-affixes
    hs-source-dirs: src
    default-language: Haskell2010

Test-Suite dot-test
    type: exitcode-stdio-1.0
    main-is: tests/DotTest.hs
    other-modules: Paths_app
    autogen-modules: Paths_app
    build-depends:
          base ^>=4.17.2.0
        , filepath
        , test-framework
        , test-framework-hunit
        , HUnit
        , uma-dot
    hs-source-dirs: testsuite
    data-files:
          testsuite/data/graph.dot
        , testsuite/data/incorrect-graph.dot
    default-language: Haskell2010

Test-Suite automata-test
    type: exitcode-stdio-1.0
    main-is: tests/AutomataTest.hs
    build-depends:
          base ^>=4.17.2.0
        , test-framework
        , test-framework-quickcheck2
        , QuickCheck ^>=2.14.3
    hs-source-dirs: testsuite
    default-language: Haskell2010

Test-Suite wgraph-test
    type: exitcode-stdio-1.0
    main-is: tests/WGraphTest.hs
    build-depends:
          base ^>=4.17.2.0
        , test-framework
        , test-framework-hunit
        , HUnit
        , uma-wgraph
    hs-source-dirs: testsuite
    default-language: Haskell2010
